<resources>
    <string name="app_name" translatable="false">OnPoint</string>
    <string name="title_activity_home_screen" translatable="false">HomeScreenActivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="homescreen_todo_string" translatable="false">homescreen_todo_id</string>
    <string name="homescreen_todo_heading">TODO</string>
    <string name="homescreen_recent_id" translatable="false">homescreen_recent_id</string>
    <string name="homescreen_recent_heading">Recent</string>

    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="tab_title_main">Main</string>
    <string name="tab_title_todo">Todo</string>
    <string name="tab_title_assignments">Assign.</string>
    <string name="assignments">Assignments</string>
    <string name="todo_addButton_content_description">Add</string>
    <string name="todo_input_hint">Enter a new item here ...</string>
    <string name="string_todo_active_header" translatable="false">Active</string>
    <string name="string_todo_done_header" translatable="false">Done</string>

    <string name="switch_language_button">Chinese</string>
    <string name="settings_drawable_txt">Settings</string>
    <string name="add_university_drawable_txt">Add University</string>
    <string name="open" translatable="false">O</string>
    <string name="close" translatable="false">C</string>
    <string name="switch_language">Switch Language : ZH</string>
    <string name="todolist_heading_done">Done</string>
    <string name="todolist_heading">Active</string>
    <string name="assignment_dialog_deadline">Deadline: </string>
    <string name="assignment_dialog_close_button">Close</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="channel_name" >OnpointChannel</string>
    <string name="channel_description" >Notifications for Assignment Deadlines</string>
    <string name="CHANNEL_ID" translatable="false">OnPointChannel</string>
    <string name="assignment_notification_title" >OnPoint Assignment Due</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="assignment_search">Assignment Search</string>
    <string name="university_label_api">API Link</string>
    <string name="university_label_username">Username</string>
    <string name="university_label_password">Password</string>
    <string name="university_label_login">Add</string>
    <string name="university_login_name">Name of the university</string>
    <string name="assignment_sync_now">Sync Now</string>
    <string name="university_login_successful">Login successful</string>
    <string name="university_login_failed">Login failed</string>
    <string name="custom_assignment_set_deadline">Set deadline</string>
    <string name="custom_assignment_title">Add custom assignment</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="custom_assignment_title_input">Title</string>
    <string name="custom_assignmnet_description_input">Description</string>
    <string name="assignment_dialog_completed_button">Done</string>
    <string name="text_assignment_completed">Done Assignments</string>
    <string name="text_assignment_active">Active Assignments</string>

</resources>
