<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainTabbedActivity">



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary" >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_main" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabTodoList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_todo" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabAssignments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_title_assignments" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="?actionBarSize"
        android:padding="@dimen/appbar_padding"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

</LinearLayout>
