<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AssignmentsTabFragment">

    <Button
        android:id="@+id/assignment_sync_assignments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/assignment_sync_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/assignment_searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"

        android:title="@string/assignment_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:layout_constraintBottom_toTopOf="@+id/text_assignment_active"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignment_sync_assignments"
        app:showAsAction="always" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assignmentsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/text_assignment_completed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_assignment_active">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assignmentListCompleted"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_assignment_completed" />

    <TextView
        android:id="@+id/text_assignment_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_assignment_completed"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/assignmentListCompleted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignmentsList" />

    <TextView
        android:id="@+id/text_assignment_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_assignment_active"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/assignmentsList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignment_searchview" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/custom_assignment_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/assignments_addButton_margin_offset"
        android:layout_marginBottom="@dimen/assignments_addButton_margin_offset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>
